Target JDK 24 and use Virtual Threads wherever possible.